RESOLVED FIXED167526
Fix remaining bad uses of logDiagnosticMessageWithValue()
https://bugs.webkit.org/show_bug.cgi?id=167526
Summary Fix remaining bad uses of logDiagnosticMessageWithValue()
Chris Dumez
Reported 2017-01-27 13:30:19 PST
Fix remaining bad uses of logDiagnosticMessageWithValue().
Attachments
Patch (15.75 KB, patch)
2017-01-27 13:31 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-01-27 13:31:59 PST
WebKit Commit Bot
Comment 2 2017-01-27 15:12:38 PST
Comment on attachment 299956 [details] Patch Clearing flags on attachment: 299956 Committed r211304: <http://trac.webkit.org/changeset/211304>
WebKit Commit Bot
Comment 3 2017-01-27 15:12:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.